--- a/tmux.conf
+++ b/tmux.conf
@@ -5,8 +5,8 @@ set -s escape-time 0
 set -g default-terminal "screen-256color"
 
 # ステータスバーの色を設定する
-set -g status-fg white
-set -g status-bg black
+set-option -g status-bg "colour238"
+set-option -g status-fg "colour255"
 
 # ウィンドウリストの色を設定する
 setw -g window-status-fg cyan
@@ -30,17 +30,13 @@ set -g message-bg black
 set -g message-attr bright
 
 # ステータスバーを設定する
-## 左パネルを設定する
-set -g status-left-length 40
-set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
-## 右パネルを設定する
-set -g status-right "#[fg=cyan][%Y-%m-%d(%a) %H:%M]"
-## リフレッシュの間隔を設定する(デフォルト 15秒)
-set -g status-interval 60
+set-option -g status-left "#[fg=colour255,bg=colour241]Session: #S #[default]"
+set-option -g status-left-length 20
+set-option -g status-right "#[fg=colour255,bg=colour241] #h | LA: #(cut -d' ' -f-3 /proc/loadavg) | %m/%d %H:%M:%S#[default]"
+set-option -g status-right-length 60
+set-window-option -g window-status-format " #I: #W "
 ## ウィンドウリストの位置を中心寄せにする
 set -g status-justify centre
 ## ヴィジュアルノーティフィケーションを有効にする
 setw -g monitor-activity on
 set -g visual-activity on
-## ステータスバーを上部に表示する
-set -g status-position top
