--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -2,7 +2,7 @@ set-option -g buffer-limit 20
 set-option -g status-interval 5
 set -s escape-time 0
 
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
 
 # ステータスバーの色を設定する
 set-option -g status-bg "colour238"
